# RustDB

./: .clippy.toml  .dockerignore  .gitattributes  .gitignore  API_REFERENCE.md  API_ДОКУМЕНТАЦИЯ.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  BASIC_STRUCTURES_README.md  BENCHMARK_COMPARISON.md  CI_CD_GUIDE.md  CODING_STANDARDS.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  DATABASE_STRUCTURE_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  EXAMPLES.md  FILE_MANAGER_REPORT.md  FINAL_TESTING_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_REPORT.md  IO_OPTIMIZATION_REPORT.md  LICENSE  LOGGING_SYSTEM_REPORT.md  PAGE_MANAGER_REPORT.md  README.md  RUSTDOC_GUIDE.md  TECHNICAL_DOCUMENTATION.md  TESTING_AND_DEBUGGING_REPORT.md  TESTING_GUIDE.md  USER_GUIDE.md  architecture.puml  codecov.yml  config.toml  deny.toml  docker-compose.yml  (+7 more)
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml  docs.yml  fair_tpcc_compare.yml  release.yml  security.yml  tpcc_concurrency_sweep.yml
backup/: users.tbl
benches/: benchmarks.rs  e2e_benchmarks.rs  io_benchmarks.rs  performance_benchmarks.rs  sql_benchmarks.rs
config/: sandbox.toml
data/: bench_t.tbl  default.tbl  z2.tbl
data/ci_tpcc_idx_verify/: order_line.tbl
data/ci_tpcc_idx_verify2/: customer.tbl  district.tbl  item.tbl  order_line.tbl  stock.tbl  warehouse.tbl
deployment/: .gitignore  README.md  deploy.ps1  deploy.sh  nginx.conf  prometheus.yml
deployment/k8s/: configmap.yaml  deploy.sh  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  rustdb-deployment.yaml  rustdb-service.yaml  secret.yaml
docs/: BOTTLENECK_ANALYSIS.md  cookbook.md  crates.js  durability-and-recovery.md  help.html  roadmap.md  sandbox.md  search-index.js  settings.html  sql-explain.md  sql92-roadmap.md  src-files.js  tpcc-fair-compare.md  tpcc-new-order-baseline.md  tpcc-new-order-pr-checklist.md  tpcc-new-order-pr-performance-report.md  tpcc-phase42-bisect-run23.md
docs/network/: README.md  architecture.md  diagrams.md  engine-boundary.md  framing.md  implementation-checklist.md  quic-and-quinn.md  stream-models.md
docs/postgres_tpcc/: all.html  fn.connect_worker.html  fn.main.html  fn.prepared_from_env.html  index.html  sidebar-items.js  struct.Args.html  struct.PgExec.html  struct.PgStmts.html
docs/rustdb/: all.html  constant.VERSION.html  fn.open_sql_engine.html  index.html  sidebar-items.js  struct.Database.html
docs/rustdb_load/: all.html  enum.ConnectionMode.html  enum.Workload.html  fn.fmt_us.html  fn.main.html  fn.parse_tx_sql_file.html  fn.quantile.html  fn.query_many_on_one_stream.html  index.html  sidebar-items.js  struct.Args.html  struct.LoadReport.html  type.WorkerRow.html
docs/rustdb_quic_client/: all.html  fn.main.html  index.html  struct.Args.html
docs/rustdb_tool/: all.html  enum.Cmd.html  fn.active_transactions.html  fn.bool_str.html  fn.cmd_checkpoint.html  fn.cmd_health.html  fn.cmd_status.html  fn.cmd_wal_status.html  fn.durability_str.html  fn.main.html  fn.print_durability_env.html  fn.print_wal_summary.html  index.html  sidebar-items.js  struct.Cli.html
docs/rustdb_tpcc/: all.html  constant.MAX_LATENCY_SAMPLES.html  enum.TxnKind.html  fn.csv_escape.html  fn.lcg_next.html  fn.main.html  fn.quantile_ms.html  fn.rand_f64_0_1.html  fn.reservoir_sample_push.html  fn.run_sql_seq_on_stream.html  fn.skip_false.html  fn.tpcc_native_micro_hot.html  fn.txn_kind_tag.html  fn.txn_sql.html  index.html  sidebar-items.js  struct.Args.html  struct.Mix.html  struct.QuicExec.html  struct.TpccReport.html  struct.WorkerBiStream.html
docs/search.index/: 00051e27eabc.js  0012d3ed00bb.js  001e2e495369.js  001f1bad956a.js  0022a33a53e9.js  0029ef03f7c2.js  002eacfd47ad.js  00343e547602.js  003bfe6f5034.js  003faf9af256.js  004032bea608.js  0042b619a69d.js  00459685bec4.js  004b711380e1.js  004c092bd567.js  005714a1cac8.js  0059a11f8225.js  005c46d101ba.js  005ea1208c31.js  005f4462d37f.js  0060e607ca21.js  0068815b57cc.js  006fc2c55162.js  0077d8630b58.js  007e09547941.js  (+4630 more)
examples/: acid_example.rs  aggregation_sort_example.rs  basic_structures.rs  concurrency_example.rs  database_structure_example.rs  file_manager_example.rs  i18n_example.rs  index_example.rs  io_optimization_example.rs  join_operators_example.rs  lexer_example.rs  mvcc_example.rs  page_manager_example.rs  parser_example.rs  planner_example.rs  query_optimization_example.rs  recovery_example.rs  scan_operators_example.rs  semantic_analyzer_example.rs  test_acid.rs  transaction_example.rs
scripts/: aggregate_ci_tpcc_validations.py  aggregate_fair_tpcc.py  analyze_tpcc_txn_log.py  bench_mini_tx.sql  bench_postgres_pgbench.sh  bench_postgres_tpcc.sh  bench_report_ci.py  bench_rustdb_tpcc.sh  bench_saturation_rustdb_postgres.py  bench_sqlite_vs_rustdb.py  bench_via_ghcr_image.ps1  bench_via_ghcr_image.sh  compare_ci_runs.py  compare_pg_ci_runs.py  fair_tpcc_compare.sh  flamegraph_inner.sh  flamegraph_selfcontained.sh  flamegraph_via_docker.sh  local_fair_bench.sh  parse_single_run.py  pgbench_compare.ps1  pgbench_compare.sh  profile_cpu_linux.sh  profile_queries.txt  profile_quic_select_table.sh  profile_quic_select_table_trace_ci.sh  profile_tpcc_local_docker.sh  profile_tpcc_native.ps1  run_optimization_matrix.ps1  run_optimization_matrix.sh  run_order_line_sweep.sh  run_server_chrome_trace.ps1  sandbox-init.sh  sandbox-reset.sh  sql_quic_smoke.ps1  sql_quic_smoke.sh  sql_stateful_smoke.ps1  sql_stateful_smoke.sh  summarize_order_line_sweep.py  summarize_sql_phase_log.py  (+18 more)
src/: cli.rs  embedded.rs  lib.rs  main.rs  sql_session.rs  test_env.rs  tracing_setup.rs
tests/: catalog_persistence_reopen_tests.rs  checkpoint_boundary_tests.rs  crash_matrix_tests.rs  explain_sql_test.rs  integration_tests.rs  integration_tests_simple.rs  quic_network.rs  sql_engine_e2e.rs  wal_recovery_crash_tests.rs
tpcc-local-out/: config.profile.toml  server.der  tpcc.json  tpcc_seed.filtered.sql
(+1648 files in other folders)
