[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"
authors = ["RustDB Team <rustdb@example.com>"]
description = "Реализация реляционной базы данных на Rust"
license = "MIT"
repository = "https://github.com/CrossEyedCat/RustDB"
homepage = "https://crosseyedcat.github.io/RustDB"
documentation = "https://crosseyedcat.github.io/RustDB/docs"
readme = "README.md"
keywords = ["database", "sql", "relational", "rust", "storage"]
categories = ["database", "database-implementations"]
rust-version = "1.81.0"
exclude = [
    ".github/",
    "target/",
    "*.db",
    "*.db-*",
    ".git/",
    "architecture.puml",
    "DEVELOPMENT.md",
    "IMPLEMENTATION_CHECKLIST.md",
    "ARCHITECTURE.md",
]

[dependencies]
# Основные зависимости
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# CLI интерфейс
clap = { version = "4.0", features = ["derive"] }

# Логирование
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Работа с файлами и I/O
memmap2 = "0.9"
crossbeam = "0.8"
parking_lot = "0.12"

# Сжатие данных
lz4_flex = "0.11"

# Зависимости с ограничениями версий для совместимости MSRV
twox-hash = "=2.1.0"
indexmap = "=2.11.4"

# UUID для генерации уникальных идентификаторов
uuid = { version = "1.0", features = ["v4", "serde"] }

# Интернационализация
lazy_static = "1.4"

# Конфигурация
toml = "0.8"

# Тестирование
criterion = { version = "0.5", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "io_benchmarks"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false
