[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"
authors = ["RustDB Team <rustdb@example.com>"]
description = "Relational database implementation in Rust"
license = "MIT"
repository = "https://github.com/CrossEyedCat/RustDB"
homepage = "https://crosseyedcat.github.io/RustDB"
documentation = "https://crosseyedcat.github.io/RustDB/docs"
readme = "README.md"
keywords = ["database", "sql", "relational", "rust", "storage"]
categories = ["database", "database-implementations"]
rust-version = "1.81.0"
exclude = [
    ".github/",
    "target/",
    "*.db",
    "*.db-*",
    ".git/",
    "architecture.puml",
    "DEVELOPMENT.md",
    "IMPLEMENTATION_CHECKLIST.md",
    "ARCHITECTURE.md",
]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# CLI interface
clap = { version = "4.0", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# File operations and I/O
memmap2 = "0.9"
crossbeam = "0.8"
dashmap = "6.1"
parking_lot = "0.12"

# Data compression
lz4_flex = "0.11"

# Dependencies with version constraints for MSRV compatibility
twox-hash = "=2.1.0"
indexmap = "=2.11.4"

# UUID for generating unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Internationalization
lazy_static = "1.4"

# Configuration
toml = "0.8"

# Parallel execution
rayon = "1.10"

# Testing
criterion = { version = "0.5", optional = true }

# io_uring for Linux (optional, kernel 5.6+)
io-uring = { version = "0.7", optional = true }

[features]
default = []
criterion = ["dep:criterion"]
io-uring = ["dep:io-uring"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Порог покрытия по строкам (85%): `cargo llvm-cov` с `--ignore-filename-regex` — см. `.github/workflows/ci-cd.yml`.

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "io_benchmarks"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "sql_benchmarks"
harness = false

[[bench]]
name = "e2e_benchmarks"
harness = false
