[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"
authors = ["RustDB Team <rustdb@example.com>"]
description = "Relational database implementation in Rust"
license = "MIT"
repository = "https://github.com/CrossEyedCat/RustDB"
homepage = "https://crosseyedcat.github.io/RustDB"
documentation = "https://crosseyedcat.github.io/RustDB/docs"
readme = "README.md"
keywords = ["database", "sql", "relational", "rust", "storage"]
categories = ["database", "database-implementations"]
# Minimum: unty-next 0.1.1 (1.90+), virtue-next 0.1.3 / bincode-next derive (let chains, const API).
rust-version = "1.90.0"
exclude = [
    ".github/",
    "target/",
    "*.db",
    "*.db-*",
    ".git/",
    "architecture.puml",
]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# bincode fork with ongoing development; serde + `config::legacy()` for on-disk compatibility with bincode 1.x.
bincode-next = { version = "2.1.0", features = ["serde", "std"] }
# >=1.23.1 addresses RUSTSEC-2023-0001 (tokio / Windows named pipes).
tokio = { version = "1.23.1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"

# CLI interface
clap = { version = "4.0", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
# >=0.3.20 addresses RUSTSEC-2025-0055 (ANSI escapes in logs).
tracing-subscriber = "0.3.20"

# File operations and I/O
memmap2 = "0.9"
crossbeam = "0.8"
dashmap = "6.1"
parking_lot = "0.12"

# Data compression
lz4_flex = "0.13"

# Dependencies with version constraints for MSRV compatibility
twox-hash = "=2.1.2"
indexmap = "2.13"

# UUID for generating unique identifiers
uuid = { version = "1.0", features = ["v4", "serde"] }

# Internationalization
lazy_static = "1.4"

# Configuration
toml = "1.0"

# Parallel execution
rayon = "1.10"

# Testing
criterion = { version = "0.8", optional = true }

[features]
default = []
criterion = ["dep:criterion"]
io-uring = ["dep:io-uring"]

# io_uring is Linux-only (supported platform is Linux).
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[dev-dependencies]
criterion = "0.8"
tempfile = "3.8"
rand = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Line coverage threshold (85%): `cargo llvm-cov` with `--ignore-filename-regex` — see `.github/workflows/ci-cd.yml`.

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "io_benchmarks"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "sql_benchmarks"
harness = false

[[bench]]
name = "e2e_benchmarks"
harness = false
